--- a/rc-slider.css
+++ b/rc-slider.css
@@ -1,9 +1,9 @@
 .rc-slider {
   position: relative;
-  height: 4px;
+  height: 14px;
+  padding: 5px 0;
   width: 100%;
   border-radius: 6px;
-  background-color: #e9e9e9;
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -11,13 +11,18 @@
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+.rc-slider-rail {
+  position: absolute;
+  width: 100%;
+  background-color: #e9e9e9;
+  height: 4px;
+}
 .rc-slider-track {
   position: absolute;
   left: 0;
   height: 4px;
   border-radius: 6px;
   background-color: #abe2fb;
-  z-index: 1;
 }
 .rc-slider-handle {
   position: absolute;
@@ -29,7 +34,6 @@
   border-radius: 50%;
   border: solid 2px #96dbfa;
   background-color: #fff;
-  z-index: 2;
 }
 .rc-slider-handle:hover {
   border-color: #57c5f7;
@@ -40,11 +44,10 @@
 }
 .rc-slider-mark {
   position: absolute;
-  top: 10px;
+  top: 18px;
   left: 0;
   width: 100%;
   font-size: 12px;
-  z-index: 3;
 }
 .rc-slider-mark-text {
   position: absolute;
@@ -62,11 +65,10 @@
   width: 100%;
   height: 4px;
   background: transparent;
-  z-index: 1;
 }
 .rc-slider-dot {
   position: absolute;
-  top: -2px;
+  bottom: -2px;
   margin-left: -4px;
   width: 8px;
   height: 8px;
@@ -100,6 +102,43 @@
 .rc-slider-disabled .rc-slider-mark-text,
 .rc-slider-disabled .rc-slider-dot {
   cursor: not-allowed !important;
+}
+.rc-slider-vertical {
+  width: 14px;
+  height: 100%;
+  padding: 0 5px;
+}
+.rc-slider-vertical .rc-slider-rail {
+  height: 100%;
+  width: 4px;
+}
+.rc-slider-vertical .rc-slider-track {
+  left: 5px;
+  bottom: 0;
+  width: 4px;
+}
+.rc-slider-vertical .rc-slider-handle {
+  margin-left: -5px;
+  margin-bottom: -7px;
+}
+.rc-slider-vertical .rc-slider-mark {
+  top: 0;
+  left: 18px;
+  height: 100%;
+}
+.rc-slider-vertical .rc-slider-step {
+  height: 100%;
+  width: 4px;
+}
+.rc-slider-vertical .rc-slider-dot {
+  left: 2px;
+  margin-bottom: -4px;
+}
+.rc-slider-vertical .rc-slider-dot:first-child {
+  margin-bottom: -4px;
+}
+.rc-slider-vertical .rc-slider-dot:last-child {
+  margin-bottom: -4px;
 }
 .rc-slider-tooltip-zoom-down-enter,
 .rc-slider-tooltip-zoom-down-appear {
@@ -204,26 +243,25 @@
             transform: scale(0, 0);
   }
 }
-.rc-tooltip {
+.rc-slider-tooltip {
   position: absolute;
   left: -9999px;
   top: -9999px;
-  z-index: 4;
   visibility: visible;
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.rc-tooltip * {
+.rc-slider-tooltip * {
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.rc-tooltip-hidden {
+.rc-slider-tooltip-hidden {
   display: none;
 }
-.rc-tooltip-placement-top {
+.rc-slider-tooltip-placement-top {
   padding: 4px 0 8px 0;
 }
-.rc-tooltip-inner {
+.rc-slider-tooltip-inner {
   padding: 6px 2px;
   min-width: 24px;
   height: 24px;
@@ -236,14 +274,14 @@
   border-radius: 6px;
   box-shadow: 0 0 4px #d9d9d9;
 }
-.rc-tooltip-arrow {
+.rc-slider-tooltip-arrow {
   position: absolute;
   width: 0;
   height: 0;
   border-color: transparent;
   border-style: solid;
 }
-.rc-tooltip-placement-top .rc-tooltip-arrow {
+.rc-slider-tooltip-placement-top .rc-slider-tooltip-arrow {
   bottom: 4px;
   left: 50%;
   margin-left: -4px;
